Added success alert for testing

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,7 +4,7 @@
       width:  488,
       height: 50,
       onSuccess: function(){
-        //alert('Transfer complete');
+        alert('Transfer complete');
 		window.status = "";
 	  },
       onFailed: function(status){
