--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,7 +4,7 @@
 <%= s3_swf_upload_tag(
         :width => 488, 
         :height => 50, 
-        :success => "alert('succeeded');"
+        :success => "alert('succeeded');",
         :failed => 'alert("failed");',
         :selected => 'alert(filename + " selected - OK!");',
         :canceled => 'alert("canceled");',
