Go rid of br in url (ugly)

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,7 +9,7 @@
         :selected => 'alert(filename + " selected - OK!");',
         :canceled => 'alert("canceled");',
         :prefix => '',
-        :upload => '<br>Submit',
+        :upload => 'Submit',
         :initial_message=> 'Your message about file...')
   %>
 	<br />
