--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Form for uploading a file to s3, with other info for your app...</h1>
+<h1>Demo of use of s3-swf-upload-plugin</h1>
+
+<h2> This shows a form for uploading a file to s3, along with fields for other info for your app...</h2>
 
 <div class=main>
 
