pulled plugin updates

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Demo of use of s3-swf-upload-plugin (<%= link_to ("GreenAsJade's fork",
-					    "http://github.com/GreenAsJade/s3-swf-upload-plugin/tree/master")
-						     %>) </h1>
-
+<h1>Demo of use of s3-swf-upload-plugin </h1>
+(<%= link_to ("GreenAsJade's fork",
+     "http://github.com/GreenAsJade/s3-swf-upload-plugin/tree/master")
+     %>) 
 <h2> This shows a form for uploading a file to s3, along with fields for other info for your app...</h2>
 
 <div class=main>
