--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Demo of use of s3-swf-upload-plugin </h1>
+<h1>Example of use of s3-swf-upload-plugin </h1>
 (<%= link_to ("GreenAsJade's fork",
      "http://github.com/GreenAsJade/s3-swf-upload-plugin/tree/master")
      %>) 
